--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
             ></a>
           </div>
           <div class="row py-3">
-            <div class="col-md text-md-center">
+            <div class="col-md about">
               <small>&copy; 2020 Fernando Guisbert Segales</small>
             </div>
           </div>
