--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img
                   src="imgs/project-1.png"
                   class="card-img-top"
-                  alt="Personal Project 1"
+                  alt="Personal profile page"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -114,13 +114,13 @@
                     of a web page.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-1"
+                    href="https://github.com/ferdunt/Personal-profile-page"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-1/"
+                    href="https://ferdunt.github.io/Personal-profile-page/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -133,7 +133,7 @@
                 <img
                   src="imgs/project-2.png"
                   class="card-img-top"
-                  alt="Personal Project 2"
+                  alt="Mobile first approach layout"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -146,13 +146,13 @@
                     on multiple screen sizes "Mobile First Approach".
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-2"
+                    href="https://github.com/ferdunt/Mobile-first-approach-layout"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-2/"
+                    href="https://ferdunt.github.io/Mobile-first-approach-layout/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -165,7 +165,7 @@
                 <img
                   src="imgs/project-3.png"
                   class="card-img-top"
-                  alt="Personal Project 3"
+                  alt="Online registration form"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -179,13 +179,13 @@
                     post to Facebook.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-3"
+                    href="https://github.com/ferdunt/Online-registration-form"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-3/"
+                    href="https://ferdunt.github.io/Online-registration-form/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -198,7 +198,7 @@
                 <img
                   src="imgs/project-4.png"
                   class="card-img-top"
-                  alt="Personal Project 4"
+                  alt="Web style guide"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -213,13 +213,13 @@
                     toolbox.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-4"
+                    href="https://github.com/ferdunt/Web-style-guide"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-4/"
+                    href="https://ferdunt.github.io/Web-style-guide/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -232,7 +232,7 @@
                 <img
                   src="imgs/project-5.png"
                   class="card-img-top"
-                  alt="Personal Project 5"
+                  alt="Interactive photo gallery"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -246,13 +246,13 @@
                     a common feature of many websites.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-5"
+                    href="https://github.com/ferdunt/Interactive-photo-gallery"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-5/"
+                    href="https://ferdunt.github.io/Interactive-photo-gallery/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -265,7 +265,7 @@
                 <img
                   src="imgs/project-6.png"
                   class="card-img-top"
-                  alt="Personal Project 6"
+                  alt="Game show app"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -280,13 +280,13 @@
                     guess a random phrase.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-6"
+                    href="https://github.com/ferdunt/Game-show-app"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-6/"
+                    href="https://ferdunt.github.io/Game-show-app/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -299,7 +299,7 @@
                 <img
                   src="imgs/project-7.png"
                   class="card-img-top"
-                  alt="Personal Project 7"
+                  alt="Web app dashboard"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -314,13 +314,13 @@
                     graphics.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-7"
+                    href="https://github.com/ferdunt/WebApp-dasboard"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-7/"
+                    href="https://ferdunt.github.io/WebApp-dasboard/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
@@ -333,7 +333,7 @@
                 <img
                   src="imgs/project-8.png"
                   class="card-img-top"
-                  alt="Personal Project 8"
+                  alt="Employee directory"
                 />
                 <div class="mt-2">
                   <span class="badge badge-pill badge-success ml-3">HTML</span>
@@ -348,13 +348,13 @@
                     of data.
                   </p>
                   <a
-                    href="https://github.com/ferdunt/Techdegree-Project-8"
+                    href="https://github.com/ferdunt/Employee-directory"
                     class="btn btn-outline-success btn-sm git-link"
                     target="_blank"
                     ><i class="fab fa-github"></i> Github</a
                   >
                   <a
-                    href="https://ferdunt.github.io/Techdegree-Project-8/"
+                    href="https://ferdunt.github.io/Employee-directory/"
                     class="btn btn-outline-success btn-sm"
                     target="_blank"
                     ><i class="fas fa-broadcast-tower"></i> Demo</a
